Release CMTK-1.2.1:

- Added: "statistics" tool now optionally outputs mask-based results for all
    up to a user-provided maximum label, even if not all labels in the range
    actually occur in the mask.


Release CMTK-1.2.0 (2010-01-06):

- Added: cmtk::Console can now determine terminal line width on POSIX systems,
    and this is used by cmtk::CommandLine to format command line help output
    with the correct line breaking.
- Added: new, experimental implementation of pairwise image registration,
    with more accurate metric computation and support for arbitrary floating
    image interpolation. These are accessible through the new "registrationx"
    command line tool.
- Added: single-step mass-preserving reformatting in reformatx tool. Also
    added a new test to cover this.
- Added: "convertx" tool, which will replace "convert" in the long term but is
    designed to apply all operations given on the command line in the exact
    order that they are specified and with arbitrary repetitions. This is in
    response to Issue #3784.

- Improved: more sophisticated install and packaging configuration; still not
    fully clear how that translates into separated packages for different
    components.
- Improved: ported everything related to Qt to use the actual Qt4 classes, so
    we can finally get rid of legacy Qt3 support classes. This should reduce
    the number of actually unused dynamic libraries, which we previously had
    to link against.
- Improved: numerous small improvements to triplanar viewer
- Improved: dcm2image tool now numbers images only if there would otherwise be
    filename collisions. The printf()-type numbering has been replaced with
    two new output path substitutions, "%n" and "%N". Both expand to the empty
    string when a path is already unique without numbering. Otherwise, "%n"
    substitutes to an increasing number, and "%N" substitutes to the same