@@ -3,6 +3,8 @@ Release CMTK-1.2.1:
 - Added: "statistics" tool now optionally outputs mask-based results for all
     up to a user-provided maximum label, even if not all labels in the range
     actually occur in the mask.
+- Added: "convertx" tool now does thresholding above and below threshold, to
+    threshold and to padding.
 
 
 Release CMTK-1.2.0 (2010-01-06):
